2015-01-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* all: rebased against Unicode 7. Added unicode_script(), tr24
	Scripts lookup.

1.1

2014-06-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode.h: Add convenience definitions for several standard character
	sets in the C++ unicode:: namespace.

	* unicode.h: change iconvert::fromu::convert() to return an additional
	bool flag, an error indication.

	* unicode.h: declare "deleted" when compiling at C++11 level, or higher,
	and fix some existing C++03-style private declaration stubs.

	* unicode.h: fix pure virtual function call abort.

	* linebreaktest.C (main): Make fromu::convert return an indication
	of a failed conversion.

1.0

2014-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Refactored as a standalone library, changed some symbol names.