@@ -47,11 +47,11 @@ update-www-htmlent:
 	@SHELL@ $(srcdir)/update.sh xhtml-symbol.ent http://www.w3.org/TR/xhtml1/DTD/xhtml-symbol.ent
 	@SHELL@ $(srcdir)/update.sh xhtml-special.ent http://www.w3.org/TR/xhtml1/DTD/xhtml-special.ent
 
-lib_LTLIBRARIES=libunicode.la
-include_HEADERS=unicode.h
+lib_LTLIBRARIES=libcourier-unicode.la
+include_HEADERS=courier-unicode.h
 man_MANS=$(srcdir)/man/courier-unicode.7 $(srcdir)/man/unicode[\:][\:]iconvert[\:][\:]convert.3 $(srcdir)/man/unicode[\:][\:]iconvert[\:][\:]convert_tocase.3 $(srcdir)/man/unicode[\:][\:]iconvert[\:][\:]fromu.3 $(srcdir)/man/unicode[\:][\:]iconvert[\:][\:]tou.3 $(srcdir)/man/unicode[\:][\:]iso_8859_1.3 $(srcdir)/man/unicode[\:][\:]linebreak_callback_base.3 $(srcdir)/man/unicode[\:][\:]linebreak_callback_save_buf.3 $(srcdir)/man/unicode[\:][\:]linebreak_iter.3 $(srcdir)/man/unicode[\:][\:]linebreakc_callback_base.3 $(srcdir)/man/unicode[\:][\:]linebreakc_iter.3 $(srcdir)/man/unicode[\:][\:]ucs_2.3 $(srcdir)/man/unicode[\:][\:]ucs_4.3 $(srcdir)/man/unicode[\:][\:]utf_8.3 $(srcdir)/man/unicode[\:][\:]wordbreak_callback_base.3 $(srcdir)/man/unicode_convert.3 $(srcdir)/man/unicode_convert_deinit.3 $(srcdir)/man/unicode_convert_fromu_init.3 $(srcdir)/man/unicode_convert_fromu_tobuf.3 $(srcdir)/man/unicode_convert_fromutf8.3 $(srcdir)/man/unicode_convert_init.3 $(srcdir)/man/unicode_convert_tobuf.3 $(srcdir)/man/unicode_convert_tocase.3 $(srcdir)/man/unicode_convert_tocbuf_fromutf8_init.3 $(srcdir)/man/unicode_convert_tocbuf_init.3 $(srcdir)/man/unicode_convert_tocbuf_toutf8_init.3 $(srcdir)/man/unicode_convert_tou_init.3 $(srcdir)/man/unicode_convert_tou_tobuf.3 $(srcdir)/man/unicode_convert_toutf8.3 $(srcdir)/man/unicode_convert_uc.3 $(srcdir)/man/unicode_default_chset.3 $(srcdir)/man/unicode_grapheme_break.3 $(srcdir)/man/unicode_html40ent_lookup.3 $(srcdir)/man/unicode_isspace.3 $(srcdir)/man/unicode_lb_end.3 $(srcdir)/man/unicode_lb_init.3 $(srcdir)/man/unicode_lb_next.3 $(srcdir)/man/unicode_lb_next_cnt.3 $(srcdir)/man/unicode_lb_set_opts.3 $(srcdir)/man/unicode_lbc_end.3 $(srcdir)/man/unicode_lbc_init.3 $(srcdir)/man/unicode_lbc_next.3 $(srcdir)/man/unicode_lbc_next_cnt.3 $(srcdir)/man/unicode_lbc_set_opts.3 $(srcdir)/man/unicode_lc.3 $(srcdir)/man/unicode_script.3 $(srcdir)/man/unicode_tc.3 $(srcdir)/man/unicode_u_ucs2_native.3 $(srcdir)/man/unicode_u_ucs4_native.3 $(srcdir)/man/unicode_uc.3 $(srcdir)/man/unicode_wb_end.3 $(srcdir)/man/unicode_wb_init.3 $(srcdir)/man/unicode_wb_next.3 $(srcdir)/man/unicode_wb_next_cnt.3 $(srcdir)/man/unicode_wbscan_end.3 $(srcdir)/man/unicode_wbscan_init.3 $(srcdir)/man/unicode_wbscan_next.3
 
-libunicode_la_SOURCES=unicode.h unicode.c unicodebuf.c \
+libcourier_unicode_la_SOURCES=courier-unicode.h unicode.c unicodebuf.c \
 			unicodecpp.C \
 			unicode_ultcase.c \
 			unicode_ultcasetab.c \
@@ -64,7 +64,7 @@ libunicode_la_SOURCES=unicode.h unicode.c unicodebuf.c \
 			unicode_wordbreak.c wordbreaktab.h scriptstab.h \
 			wordbreaktab_internal.h \
 			unicode_scripts.c
-libunicode_la_LDFLAGS=-version-info 1:0:0
+libcourier_unicode_la_LDFLAGS=-version-info 1:0:0
 
 EXTRA_DIST=$(noinst_SCRIPTS) $(man_MANS) $(PACKAGE).spec
 
@@ -98,33 +98,33 @@ unicode_htmlent.h: xhtml-lat1.ent xhtml-special.ent xhtml-symbol.ent mkhtmlent.p
 endif
 
 unicodetest_SOURCES=unicodetest.c
-unicodetest_DEPENDENCIES=libunicode.la
-unicodetest_LDADD=libunicode.la
+unicodetest_DEPENDENCIES=libcourier-unicode.la
+unicodetest_LDADD=libcourier-unicode.la
 unicodetest_LDFLAGS=-static
 
 graphemetest_SOURCES=graphemetest.c
-graphemetest_DEPENDENCIES=libunicode.la
-graphemetest_LDADD=libunicode.la
+graphemetest_DEPENDENCIES=libcourier-unicode.la
+graphemetest_LDADD=libcourier-unicode.la
 graphemetest_LDFLAGS=-static
 
 linebreaktest_SOURCES=linebreaktest.C
-linebreaktest_DEPENDENCIES=libunicode.la
-linebreaktest_LDADD=libunicode.la
+linebreaktest_DEPENDENCIES=libcourier-unicode.la
+linebreaktest_LDADD=libcourier-unicode.la
 linebreaktest_LDFLAGS=-static
 
 wordbreaktest_SOURCES=wordbreaktest.C
-wordbreaktest_DEPENDENCIES=libunicode.la
-wordbreaktest_LDADD=libunicode.la
+wordbreaktest_DEPENDENCIES=libcourier-unicode.la
+wordbreaktest_LDADD=libcourier-unicode.la
 wordbreaktest_LDFLAGS=-static
 
 enttest_SOURCES=enttest.c
-enttest_DEPENDENCIES=libunicode.la
-enttest_LDADD=libunicode.la
+enttest_DEPENDENCIES=libcourier-unicode.la
+enttest_LDADD=libcourier-unicode.la
 enttest_LDFLAGS=-static
 
 scripttest_SOURCES=scripttest.c
-scripttest_DEPENDENCIES=libunicode.la
-scripttest_LDADD=libunicode.la
+scripttest_DEPENDENCIES=libcourier-unicode.la
+scripttest_LDADD=libcourier-unicode.la
 scripttest_LDFLAGS=-static
 
 check-am: unicodetest
